<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/commonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/server_auth_code_based"
            android:textColor="#58595B"
            android:textSize="18sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/appleInstructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/utility_layout_bg"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <!--<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="|||" android:textSize="12sp" android:layout_margin="30dp"/>
        <LinearLayout android:layout_width="1dp" android:layout_height="match_parent" android:background="#CCCCCC" ></LinearLayout>-->
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/apple_logo"
                    android:src="@drawable/apple_logo" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_get_apple"
                        android:textColor="#000000"
                        android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E8E8E8"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/oauth_instructions_apple_title" />

            <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oauth_instructions_apple" />

            <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oauth_instructions_apple_cont" />

            <TextView
                    android:id="@+id/appleClickHere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/click_here_apple" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/googleInstructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/utility_layout_bg"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <!--<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="|||" android:textSize="12sp" android:layout_margin="30dp"/>
        <LinearLayout android:layout_width="1dp" android:layout_height="match_parent" android:background="#CCCCCC" ></LinearLayout>-->
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/google_logo"
                    android:src="@drawable/google" />

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_get_google_token"
                        android:textColor="#000000"
                        android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E8E8E8"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/oauth_instructions_google_title" />

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oauth_instructions_google" />

            <TextView
                    android:id="@+id/googleClickHere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/click_here_google" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>