<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/commonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/user_id_based"
                android:textColor="#58595B"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/e_mail"
                android:textColor="#58595B"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/editTextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/value"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

        <Button
                android:id="@+id/buttonContinue"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@drawable/button_text_color" />
    </LinearLayout>


</LinearLayout>
